fix: 774 - title z-index issue

--- a/src/entities/course/ui/course-card/course-card.module.scss
+++ b/src/entities/course/ui/course-card/course-card.module.scss
@@ -69,6 +69,10 @@
     background-color: $color-white;
   }
 
+  .course-title {
+    z-index: 2;
+  }
+
   @include media-hover {
     &:hover .card-header::after {
       @include card-corner-accent($accent-color, $isHovered: true);
